add options for selecting gc